syntax = "proto3";

service MovieService{
    rpc searchMovie (SearchParam) returns (MovieList) {};
}

message SearchParam{
    required string searchParam = 1;
}

message MovieDetails{
    int vote_count = 1;
    double vote_average = 2;
    string title = 3;
    double popularity = 4;
    string original_language = 5;
    string original_title = 6;
    string overview = 7;
    string release_date = 8;
    int id = 9;
}

message MovieList{
    repeated MovieDetails movie = 1 [packed=true];
}